fix: jpackage 빌드 오류 수정 - module-info.java 및 의존성 모듈화
- extra-java-module-info 플러그인 추가: json-simple에 Automatic-Module-Name 부여
- module-info.java 복원: jlink/jpackage 실행에 필수
- failOnMissingModuleInfo=false: 나머지 비모듈 jar는 unnamed module로 처리
- application.mainModule 복원: badass-jlink 3.x 요구 사항
- forceMerge 범위 조정: json-simple은 extra-java-module-info로 처리하므로 제외